fix crashed string
22.09.29

--- a/Servlet_02/src/main/webapp/Ex01_Login.html
+++ b/Servlet_02/src/main/webapp/Ex01_Login.html
@@ -5,6 +5,16 @@
 <title>Login Page</title>
 </head>
 <body>
-	
+	<form action = "Login">
+		<div>
+			ID : <input type = "text", name = "id">
+		</div>
+		<div>
+			PW : <input type = "password", name = "pw">
+		</div>
+		<div>
+			<input type = "submit" value = "login">
+		</div>
+	</form>
 </body>
 </html>
