--- a/JSP_02/src/main/webapp/JSP_02/Ex04_CreateInput.html
+++ b/JSP_02/src/main/webapp/JSP_02/Ex04_CreateInput.html
@@ -2,14 +2,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>CreateInput</title>
+<title>Create Input</title>
 </head>
 <body>
 	<fieldset>
 		<legend>랜덤 숫자 입력</legend>
-		<form action="Ex04_CreateInput.jsp" method = "post">
-			<input type="number" name="number"> <br> <input
-				type="submit" value="생성하기">
+		<form action="Ex04_CreateInput.jsp" method="post" align="center">
+			<div>
+				<input type="number" name="number">
+			</div>
+			<div>
+				<input type="submit" value="생성하기">
+			</div>
 		</form>
 	</fieldset>
 </body>
